# newswatcher-consumer

./: .gitignore  Makefile  app.py  autoapp.py  pyproject.toml
kafka_consumer/: app.py  consumer.py  consumer_mongo.py  settings.py
kafka_consumer/consumer_mongo/: docs.py  worker.py
kafka_consumer/consumer_rmdb/: database.py  schema.sql  worker.py
tests/: conftest.py  factories.py  test_consumer.py
